--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-This module is part of the Scala Eclipse plugin. See,
+This module is part of the Scala IDE for Eclipse. See,
 
-   https://lampsvn.epfl.ch/trac/scala/wiki/EclipsePlugin
+   http://scala-ide.assembla.com/wiki/show/scala-ide
