--- a/README
+++ b/README
@@ -1,3 +1,7 @@
 This module is part of the Scala IDE for Eclipse. See,
 
    http://scala-ide.assembla.com/wiki/show/scala-ide
+
+and the project home at,
+
+   http://www.scala-ide.org/
