--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,1 +1,2 @@
 * Fixed bug in PresentationCompiler.parseTree - :ticket:`1001326`
+* Ignore non-existent source classpath entries - :ticket:`1001394`
