--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,3 +4,5 @@
 * Add syntax highlighting for numeric literals - :ticket:`1001442`
 * Add syntax highlighting for escape sequences - :ticket:`1001372`
 * Add syntax highlighting for Scaladoc - :ticket:`1001172`
+* Disable Java quick fixes/assists in Scala sources :ticket:`1001434`
+* Disable Run As/Debug As Java in Scala sources :ticket:`1001178`
