Update of bracket auto edit strategy
The old behavior was inconsistent, thus it is changed to follow these
two rules:

1. An opening brace is always closed except when it is inserted directly
   before non white space:

     xs map ^(_+1) ==> xs map {^(_+1)

2. Furthermore, an opening brace is not closed if there are unmatched
   closing braces after the caret position:

     xs map {^}} ==> xs map {{^}}

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -8,3 +8,4 @@
 * Disable Run As/Debug As Java in Scala sources :ticket:`1001178`
 * Correct partitioning of octal sequences in character literals - :ticket:`1001443`
 * Add syntax highlighting for escape sequences in character literals  - :ticket:`1001444`
+* Prevent auto-insertion of closing brace when editing an existing line - :ticket:`1001309`
