--- a/AUTHORS
+++ b/AUTHORS
@@ -1,50 +1,49 @@
-Adriaan Moors <adriaan.moors@typesafe.com>
-Alden Torres <aldenml@gmail.com>
-Alex Parvulescu <alex.parvulescu@gmail.com>
-Amir Shaikhha <amir.shaikhha@typesafe.com>
-Antonio Cunei <antonio.cunei@typesafe.com>
-Daniel Ratiu <ratiud@googlemail.com>
-Dan Kilman <dankilman@gmail.com>
-David Bernard <david.bernard.31@gmail.com>
-David Taylor <davidtaylor@foursquare.com>
-Donna Malayeri <lindydonna@gmail.com>
-Donny Nadolny <donny.nadolny@gmail.com>
-Emac Shen <bishen@ebay.com>
-Eric Molitornn <eric@molitor.org>
-ervandew <ervandew@gmail.com>
-Eugene Vigdorchik <eugene.vigdorchik@gmail.com>
-Fabian Steeg <fsteeg@gmail.com>
-François Garillot <francois@garillot.net>
-Hubert Plociniczak <hubert.plociniczak@gmail.com>
-Iulian Dragos <iulian.dragos@typesafe.com>
-Ivan Kuraj <ivan.kuraj@epfl.ch>
-James Earl Douglas <james@earldouglas.com>
-Jedd Haberstro <jedd.haberstro@typesafe.com>
-Jeremy Heiner <ScalaProtractor@gmail.com>
-Jin Mingjian <jin.phd@gmail.com>
-Jon Mundorf <ejmundorf@gmail.com>
-Joshua Suereth <joshua.suereth@typesafe.com>
-lindydonna <lindydonna@gmail.com>
-Luc Bourlier <luc.bourlier@typesafe.com>
-Mads Hartmann Jensen <mads379@gmail.com>
-Lanna Marconi <marconi.lanna@gmail.com>
-Martin Odersky <odersky@gmail.com>
-Matthew Farwell <matthew@farwell.co.uk>
-Matthew Neeley <mneeley@gmail.com>
-Matt Russell <MattRussellUK@gmail.com>
-Michael Holzer <michi_holzer@gmx.at>
-Miles Sabin <miles@milessabin.com>
-Mirco Dotta <mirco.dotta@typesafe.com>
-Mirko Stocker <me@misto.ch>
-Paul Phillips <paulp@improving.org>
-Rafał Krzewski <rafal.krzewski@caltha.pl>
-Richard O. Legendi <richard.legendi@gmail.com>
-Robin Green <greenrd@greenrd.org>
-Lucas Rytz <lucas.rytz@epfl.ch>
-Sandro Gržičić <grzicic.sandro@gmail.com>
-Sean McDirmid <sean.mcdirmid@epfl.ch>
-Simon Schaefer <mail@antoras.de>
-Tim Clendenen <timmyc@hotmail.com>
-Tom Crockett <pelotom@gmail.com>
-Geoffrey Washburn <geoffrey.washburn@epfl.ch>
-Zsombor Gegesy <gzsombor@gmail.com>
+Adriaan Moors <(λx.λy.x@y) (adriaan.moors)(typesafe.com)>
+Alden Torres <(λx.λy.x@y) (aldenml)(gmail.com)>
+Alex Parvulescu <(λx.λy.x@y) (alex.parvulescu)(gmail.com)>
+Amir Shaikhha <(λx.λy.x@y) (amir.shaikhha)(typesafe.com)>
+Antonio Cunei <(λx.λy.x@y) (antonio.cunei)(typesafe.com)>
+Daniel Ratiu <(λx.λy.x@y) (ratiud)(googlemail.com)>
+Dan Kilman <(λx.λy.x@y) (dankilman)(gmail.com)>
+David Bernard <(λx.λy.x@y) (david.bernard.31)(gmail.com)>
+David Taylor <(λx.λy.x@y) (davidtaylor)(foursquare.com)>
+Donna Malayeri <(λx.λy.x@y) (lindydonna)(gmail.com)>
+Donny Nadolny <(λx.λy.x@y) (donny.nadolny)(gmail.com)>
+Emac Shen <(λx.λy.x@y) (bishen)(ebay.com)>
+Eric Molitor <(λx.λy.x@y) (eric)(molitor.org)>
+Ervan Dew <(λx.λy.x@y) (ervandew)(gmail.com)>
+Eugene Vigdorchik <(λx.λy.x@y) (eugene.vigdorchik)(gmail.com)>
+Fabian Steeg <(λx.λy.x@y) (fsteeg)(gmail.com)>
+François Garillot <(λx.λy.x@y) (francois)(garillot.net)>
+Hubert Plociniczak <(λx.λy.x@y) (hubert.plociniczak)(gmail.com)>
+Iulian Dragos <(λx.λy.x@y) (iulian.dragos)(typesafe.com)>
+Ivan Kuraj <(λx.λy.x@y) (ivan.kuraj)(epfl.ch)>
+James Earl Douglas <(λx.λy.x@y) (james)(earldouglas.com)>
+Jedd Haberstro <(λx.λy.x@y) (jedd.haberstro)(typesafe.com)>
+Jeremy Heiner <(λx.λy.x@y) (ScalaProtractor)(gmail.com)>
+Jin Mingjian <(λx.λy.x@y) (jin.phd)(gmail.com)>
+Jon Mundorf <(λx.λy.x@y) (ejmundorf)(gmail.com)>
+Joshua Suereth <(λx.λy.x@y) (joshua.suereth)(typesafe.com)>
+Luc Bourlier <(λx.λy.x@y) (luc.bourlier)(typesafe.com)>
+Mads Hartmann Jensen <(λx.λy.x@y) (mads379)(gmail.com)>
+Lanna Marconi <(λx.λy.x@y) (marconi.lanna)(gmail.com)>
+Martin Odersky <(λx.λy.x@y) (odersky)(gmail.com)>
+Matthew Farwell <(λx.λy.x@y) (matthew)(farwell.co.uk)>
+Matthew Neeley <(λx.λy.x@y) (mneeley)(gmail.com)>
+Matt Russell <(λx.λy.x@y) (MattRussellUK)(gmail.com)>
+Michael Holzer <(λx.λy.x@y) (michi_holzer)(gmx.at)>
+Miles Sabin <(λx.λy.x@y) (miles)(milessabin.com)>
+Mirco Dotta <(λx.λy.x@y) (mirco.dotta)(typesafe.com)>
+Mirko Stocker <(λx.λy.x@y) (me)(misto.ch)>
+Paul Phillips <(λx.λy.x@y) (paulp)(improving.org)>
+Rafał Krzewski <(λx.λy.x@y) (rafal.krzewski)(caltha.pl)>
+Richard O. Legendi <(λx.λy.x@y) (richard.legendi)(gmail.com)>
+Robin Green <(λx.λy.x@y) (greenrd)(greenrd.org)>
+Lukas Rytz <(λx.λy.x@y) (lukas.rytz)(epfl.ch)>
+Sandro Gržičić <(λx.λy.x@y) (grzicic.sandro)(gmail.com)>
+Sean McDirmid <(λx.λy.x@y) (sean.mcdirmid)(epfl.ch)>
+Simon Schaefer <(λx.λy.x@y) (mail)(antoras.de)>
+Tim Clendenen <(λx.λy.x@y) (timmyc)(hotmail.com)>
+Tom Crockett <(λx.λy.x@y) (pelotom)(gmail.com)>
+Geoffrey Washburn <(λx.λy.x@y) (geoffrey.washburn)(epfl.ch)>
+Zsombor Gegesy <(λx.λy.x@y) (gzsombor)(gmail.com)>
